修改composer.json中项目名

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
             "url": "https://packagist.org"
         }
     },
-    "name": "aozeahj/ExcelDemo",
+    "name": "aozeahj/excel-demo",
     "description": "more demo for excel table fastly product which based on phpspreadsheet",
     "authors": [
         {
